[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Mobile/MobileMenuControls.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/UI/menuBG.png" type="Texture" id=2]
[ext_resource path="res://Scripts/States/CreditsState.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Objects/ChoiceMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sprites/Credits/Portraits/codist.png" type="Texture" id=5]
[ext_resource path="res://Assets/Other/Fonts/vcr.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Sounds/cancel_menu.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Other/Fonts/font_alphabet.tres" type="BitmapFont" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="OptionsState" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 643, 365 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ChoiceMenu" parent="." instance=ExtResource( 4 )]
optionOffset = Vector2( 20, 100 )
useIcons = true

[node name="Info" type="Node2D" parent="."]

[node name="Portrait" type="Sprite" parent="Info"]
position = Vector2( 958, 430 )
texture = ExtResource( 5 )

[node name="InfoLabel" type="Label" parent="Info"]
margin_left = 354.0
margin_top = 533.0
margin_right = 1255.0
margin_bottom = 672.0
custom_fonts/font = SubResource( 1 )
text = "Codist
Creator of FNF Godot"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="Info"]
margin_left = 350.0
margin_top = 678.0
margin_right = 1255.0
margin_bottom = 707.0
custom_fonts/font = SubResource( 2 )
text = "Icon by @Palladium346, art by @Hzx_Gato"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 116.0
color = Color( 0, 0, 0, 0.34902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurPage" type="Label" parent="ColorRect"]
margin_top = 14.0
margin_right = 1600.0
margin_bottom = 126.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "CREDITS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobileMenuControls" parent="." instance=ExtResource( 1 )]
